--- a/src/layouts/payment.fxml
+++ b/src/layouts/payment.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PaymentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PaymentController">
    <children>
       <BorderPane prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #CCCCCC;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -38,7 +38,7 @@
       </BorderPane>
       <AnchorPane layoutX="219.0" layoutY="210.0" prefHeight="297.0" prefWidth="454.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
          <children>
-            <RadioButton fx:id="DeliveryPayment" layoutX="31.0" layoutY="23.0" mnemonicParsing="false" text="Betala vid leverans" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+            <RadioButton fx:id="DeliveryPayment" layoutX="31.0" layoutY="23.0" mnemonicParsing="false" onAction="#paymentChosen" text="Betala vid leverans" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="18.0" />
                </font>
@@ -46,7 +46,7 @@
                   <ToggleGroup fx:id="paymentMethod" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton layoutX="10.0" layoutY="58.0" mnemonicParsing="false" onAction="#cardPaymentClicked" text="Direktbetalning" toggleGroup="$paymentMethod" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="50.0">
+            <RadioButton layoutX="10.0" layoutY="58.0" mnemonicParsing="false" onAction="#paymentChosen" text="Direktbetalning" toggleGroup="$paymentMethod" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="50.0">
                <font>
                   <Font size="18.0" />
                </font>
@@ -74,27 +74,27 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="10.0" layoutY="10.0" prefHeight="39.0" prefWidth="62.0" text="1234-5678-9012-3456" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="40.0">
+                        <TextField fx:id="cardFirstFour" layoutX="10.0" layoutY="10.0" prefHeight="39.0" prefWidth="62.0" text="1234-5678-9012-3456" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="40.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </TextField>
-                        <TextField prefHeight="39.0" prefWidth="62.0" text="1234-5678-9012-3456" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="40.0">
+                        <TextField fx:id="cardSecondFour" prefHeight="39.0" prefWidth="62.0" text="1234-5678-9012-3456" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="40.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </TextField>
-                        <TextField prefHeight="39.0" prefWidth="62.0" text="1234-5678-9012-3456" AnchorPane.leftAnchor="140.0" AnchorPane.topAnchor="40.0">
+                        <TextField fx:id="cardThirdFour" prefHeight="39.0" prefWidth="62.0" text="1234-5678-9012-3456" AnchorPane.leftAnchor="140.0" AnchorPane.topAnchor="40.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </TextField>
-                        <TextField prefHeight="39.0" prefWidth="62.0" text="1234-5678-9012-3456" AnchorPane.leftAnchor="205.0" AnchorPane.topAnchor="40.0">
+                        <TextField fx:id="cardFourthFour" prefHeight="39.0" prefWidth="62.0" text="1234-5678-9012-3456" AnchorPane.leftAnchor="205.0" AnchorPane.topAnchor="40.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </TextField>
-                        <TextField layoutX="10.0" layoutY="115.0" prefWidth="200.0" text="Stål Mannen" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="130.0">
+                        <TextField fx:id="cardName" layoutX="10.0" layoutY="115.0" prefWidth="200.0" text="Stål Mannen" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="130.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -104,13 +104,13 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ComboBox layoutX="250.0" layoutY="137.0" prefHeight="40.0" prefWidth="100.0" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="130.0" />
+                        <ComboBox fx:id="validMonth" layoutX="250.0" layoutY="137.0" prefHeight="40.0" prefWidth="100.0" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="130.0" />
                         <Label layoutX="235.0" layoutY="100.0" text="Giltigt till:" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="100.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ComboBox layoutX="430.0" layoutY="148.0" prefHeight="40.0" prefWidth="100.0" AnchorPane.leftAnchor="370.0" AnchorPane.topAnchor="130.0" />
+                        <ComboBox fx:id="validYear" layoutX="430.0" layoutY="148.0" prefHeight="40.0" prefWidth="100.0" AnchorPane.leftAnchor="370.0" AnchorPane.topAnchor="130.0" />
                         <Label layoutX="363.0" layoutY="127.0" text="/" AnchorPane.leftAnchor="355.0" AnchorPane.topAnchor="125.0">
                            <font>
                               <Font size="32.0" />
@@ -121,7 +121,7 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <TextField layoutY="210.0" prefWidth="200.0" text="Stål Mannen" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="220.0">
+                        <TextField fx:id="CVCCode" layoutY="210.0" prefWidth="200.0" text="Stål Mannen" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="220.0">
                            <font>
                               <Font size="18.0" />
                            </font>
