--- a/src/layouts/cart_element.fxml
+++ b/src/layouts/cart_element.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="460.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="148.0" minWidth="10.0" prefWidth="123.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="154.0" />
@@ -17,12 +18,12 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Varunamn">
+      <Label fx:id="productName" text="Varunamn">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Label text="9999 kr/kg" GridPane.columnIndex="2">
+      <Label fx:id="pricePerUnit" text="9999 kr/kg" GridPane.columnIndex="2">
          <padding>
             <Insets left="7.0" />
          </padding>
@@ -30,7 +31,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label text="9999 kr" GridPane.columnIndex="3">
+      <Label fx:id="totalPrice" text="9999 kr" GridPane.columnIndex="3">
          <padding>
             <Insets left="7.0" />
          </padding>
@@ -40,9 +41,9 @@
       </Label>
       <Group GridPane.columnIndex="1">
          <children>
-            <Button maxHeight="28.0" minWidth="-Infinity" mnemonicParsing="false" prefHeight="28.0" prefWidth="37.0" text="-" />
-            <TextField layoutX="40.0" prefWidth="40.0" />
-            <Button layoutX="83.0" maxHeight="28.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="28.0" prefWidth="37.0" text="+" />
+            <Button maxHeight="28.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="28.0" prefWidth="37.0" text="-" />
+            <TextField fx:id="amountTF" layoutX="40.0" onAction="#valueChanged" prefWidth="40.0" />
+            <Button fx:id="addButton" layoutX="83.0" maxHeight="28.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="28.0" prefWidth="37.0" text="+" />
          </children>
       </Group>
    </children>
