--- a/src/layouts/lightbox.fxml
+++ b/src/layouts/lightbox.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Polygon?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LightboxController">
    <children>
       <Polygon fill="WHITE" layoutX="14.0" layoutY="354.0" rotate="-90.0" stroke="BLACK" strokeType="INSIDE" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0">
         <points>
@@ -33,9 +33,10 @@
             </Polygon>
             <StackPane alignment="TOP_LEFT" layoutX="185.0" layoutY="125.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <fx:include fx:id="historyPane" source="history.fxml" />
-                  <fx:include fx:id="shoppingListsPane" source="shopping_lists.fxml" />
-                  <Button mnemonicParsing="false" style="-fx-background-color: red;" text="X" textFill="WHITE" StackPane.alignment="TOP_RIGHT">
+                  <fx:include fx:id="history" source="history.fxml" />
+                  <fx:include fx:id="shoppingLists" source="shopping_lists.fxml" />
+                  <fx:include fx:id="myAccount" source="my_account.fxml" />
+                  <Button mnemonicParsing="false" onAction="#close" style="-fx-background-color: red;" text="X" textFill="WHITE" StackPane.alignment="TOP_RIGHT">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
